--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
-notebook:
-  image: jupyter/pyspark-notebook
-  ports:
-    - 8888:8888
-  volumes:
-    - $PWD/data:/home/jovyan/data
+version: '3'
+services:
+  spark:
+    image: jupyter/pyspark-notebook
+    ports:
+      - 8888:8888
+    volumes:
+      - ./data:/home/jovyan/data/
